--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,8 @@
   </head>
   <body>
     <app-root></app-root>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkCl6oJ2Txmz9991Nj_WAX4Rg_iKlDjc4&libraries=places&language=pt-BR">
+    </script>
   </body>
 </html>
